# domainradar-training

./: README.md  pyproject.toml
decision/: decision_nn-train.ipynb  malware_decision_v2.ipynb
decision/boundaries/: decision_nn_scaler.joblib
decision/data/: README.md  (+1 more)
dga/: DGA-NN-test-nonNDF.ipynb  DGA-NN-test.ipynb  DGA-NN-train-nonNDF.ipynb  DGA-NN-train.ipynb  README.md  lightgbm_dga_binary_train.ipynb  ndf_for_dga.ipynb
feature-extraction/: .gitignore  README.md  config.py  lexical-processor.py  load_domains.py  loader.py  merge_parquets.py  ngrams.py  parquetbrowse.ipynb  projection.py  schema.py
malware/: Malware-DNS-NN-train.ipynb  Malware-DeepNN-train.ipynb  Malware-GEO-NN-train.ipynb  Malware-IP-NN-train.ipynb  Malware-RDAP-NN-train.ipynb  README.md  malware_cnn_train.ipynb  malware_deep_train.ipynb  malware_gru_train.ipynb  malware_html_lgbm_train.ipynb  malware_residual_train.ipynb  malware_tfidf_lgbm_train.ipynb  xgboost_train-nonNDF.ipynb  xgboost_train.ipynb
mongo-tools/: domain_selector.py  env.example  live-test.sh
phishing/: .gitignore  Phishing-DNS-NN-train.ipynb  Phishing-DeepNN-train.ipynb  Phishing-GEO-NN-train.ipynb  Phishing-IP-NN-train.ipynb  Phishing-RDAP-NN-train.ipynb  README.md  cnn_combined.ipynb  cnn_train.ipynb  lightgbm_train.ipynb  lightgbm_train_nonNDF.ipynb  phishing_cnn_train.ipynb  phishing_tfidf_lgbm_train.ipynb  svm_train.ipynb  xgboost_html.ipynb  xgboost_train.ipynb
testdata/: 2405_clftest_malware_filtered_HTML.parquet  2405_clftest_phishing_filtered_HTML.parquet
utils/: dga_mapping.py  preprocess.py
(+23 files in other folders)
