[tool.poetry]
name = "domainradar-training"
version = "0.1.0"
description = "Model training and optimization"
authors = ["ihranicky <ihranicky@fit.vutbr.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~=3.11"
notebook = ">=6.5.4"
scikit-learn = ">=1.2.2"
tensorflow-io-gcs-filesystem = {version = ">=0.36.0", python = ">=3.11,<3.12"}
tensorflow = ">=2.15.0"
keras = ">=2.15.0"
keras-visualizer = ">=3.1.2"
visualkeras = "0.0.2"
xgboost = "^2.0.3"
matplotlib = ">=3.7.1"
seaborn = ">=0.12.2"
pandas = ">=2.0.0"
pymongoarrow = ">=0.7.0"
python-dotenv = ">=1.0.0"
click = ">=8.1.3"
tldextract = ">=3.2.0"
dnspython = "~=2.5.0"
pymongo = ">=4.4.0"
pyarrow = "^15.0.0"
nltk = ">=3.8.1"
shap = "~=0.42.1"
numba = "~=0.57.1"
numpy = "~=1.24.4"
PDPbox = ">=0.3.0"
transformers = "^4.35.2"
schema = "^0.7.5"
tabulate = "^0.9.0"
colorama = "^0.4.6"
statsmodels = "^0.14.0"
torch = "^2.1.2"
category-encoders = "^2.6.3"
DateTime = "^5.4"
sklearn-pandas = "^2.2.0"
toolkits = "^0.2.6"
"mpl-toolkits.clifford" = "^0.0.3"
tqdm = "^4.66.2"
math22 = "^2.2"
python-math = "^0.0.1"
logging4 = "^0.0.2"
joblib = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
